2005-11-26 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-cairo-render.c, rsvg.c, rsvg.h: made that partial rendering api that I promised Rahga ages ago. Havn't tested yet.
	
2005-11-25 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: 2.13.3

2005-11-04 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-art-*.[ch]: Remove these files, as they've been replaced by Cairo. 
	Libart is dead. Long live libart!
	
2005-10-31 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.h: Revert API changes to make the Gimp folk happier
	* rsvg-base.c: Reflect that change elsewhere
	* test-display.c: Ditto
	* test-rsvg.c: Ditto
	* rsvg-cairo.c: Ditto
	
2005-10-25 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: 2.13.2
	
2005-10-25 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-file-util.c: Fix bug 319601, resolving relative references to an image's dependencies

2005-10-23 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* everywhere: use strings for RTTI, not sure about the speed hit, but allows us a lot more flexiblity
	* rsvg-base.c: hack char structs so that switch ignores them.

2005-10-23 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-private.h: removed obsolete percentage resolution structures
	* rsvg-base.c: char structs are back
	* rsvg-text.c: rewrite, now supports DOM stuff and trefs

2005-10-22 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cond.c (rsvg_cond_parse_system_language): setlocale(LC_ALL) 
	may return "C". Evaluate $LANG first, equate "C" with "en".
	
2005-10-22 Dom Lachowicz <cinamod@hotmail.com>

	* gtk-engine/svg-render.c: Cache RsvgHandles rather than GByteArrays
	containing SVG data. Preparation for move to cairo-only theme engine.
	
2005-10-22 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Rip out libart backend; require the cairo backend, and require cairo >= 1.0.2
	* Makefile.am: re-enable the gtk-engine and gdk-pixbuf-loader. Ditto, library re-org
	* librsvg-2.0.pc.in: Ditto
	* librsvg.spec.in: Ditto
	* rsvg.c: Ditto