@@ -21,7 +21,7 @@ dnl ===========================================================================
 
 LIBRSVG_MAJOR_VERSION=2
 LIBRSVG_MINOR_VERSION=13
-LIBRSVG_MICRO_VERSION=3
+LIBRSVG_MICRO_VERSION=4
 AC_SUBST(LIBRSVG_MAJOR_VERSION)
 AC_SUBST(LIBRSVG_MINOR_VERSION)
 AC_SUBST(LIBRSVG_MICRO_VERSION)
